--- a/backup/传奇极品射线 蓝盾 补丁.md
+++ b/backup/传奇极品射线 蓝盾 补丁.md
@@ -1,2 +1,5 @@
 [传奇极品射线补丁.zip](https://github.com/user-attachments/files/17570235/default.zip)
 [蓝盾 射线补丁内附安装视频教程.zip](https://github.com/user-attachments/files/17570237/default.zip)
+![小火小冰原始盾其他不改演示效果](https://github.com/user-attachments/assets/8bf39a37-4be0-4456-9f28-870da70b6197)
+
+
